hints, JDK6